--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,7 @@
     <dimen name="first_image_box_size">250dp</dimen>
     <dimen name="little_margin">20dp</dimen>
     <dimen name="first_font_size">25sp</dimen>
+    <dimen name="game_cover_width">160dp</dimen>
+    <dimen name="game_cover_height">270dp</dimen>
+    <dimen name="description_text_size">18sp</dimen>
 </resources>
