--- a/app/src/main/res/layout/fragment_game_details.xml
+++ b/app/src/main/res/layout/fragment_game_details.xml
@@ -37,8 +37,11 @@
 
     <TextView
         android:id="@+id/tv_game_description"
+        android:scrollbars="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginTop="@dimen/little_margin"
+        android:layout_marginBottom="@dimen/little_margin"
         android:layout_marginStart="@dimen/little_margin"
         android:layout_marginEnd="@dimen/little_margin"
         android:textSize="@dimen/description_text_size"
