Activity exclusiva para logins

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -30,4 +30,11 @@
         android:layout_marginTop="20dp"
         android:text="@string/login_word"/>
 
+    <ProgressBar
+        android:id="@+id/pb_login"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
+
 </LinearLayout>
